Fixes sticky nav to animate in mid scroll action on mobile.

--- a/public/css/styles-bundle.css
+++ b/public/css/styles-bundle.css
@@ -1556,8 +1556,7 @@ XX. ADS
   width: 100%;
   z-index: 200;
   background-color: #212121;
-  display: none;
-  top: -100px;
+  transform: translate3d(0, -100px, 0);
   -webkit-transtion: all 0.25s ease-out;
   -moz-transition: all 0.25s ease-out;
   -o-transition: all 0.25s ease-out;
@@ -1565,7 +1564,7 @@ XX. ADS
   #scrollNav ul {
     margin-top: 2px; }
   #scrollNav.visible {
-    top: 0; }
+    transform: translate3d(0, -2px, 0); }
 
 .seriesNav {
   position: fixed;
